--- a/package.json
+++ b/package.json
@@ -3,16 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cyntler/react-doc-viewer": "^1.17.0",
     "@mediapipe/tasks-vision": "^0.10.18",
+    "@react-spring/three": "^9.7.5",
     "@react-three/drei": "^9.119.0",
     "@react-three/fiber": "^8.17.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "docx": "^9.1.0",
+    "docx-preview": "^0.3.3",
+    "file-saver": "^2.0.5",
+    "framer-motion": "^11.15.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.464.0",
+    "mammoth": "^1.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "three": "^0.171.0",
