--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 GEMINI_API_KEY=AIzaSyBN5WVkfPSZ4EcqoTy06XfmaRjXrl0DbnU
 PORT=5000
-MONGO_URI=mongodb+srv://prabhuom2021:om123@cluster0.l3mhw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://ebadshk48:ebad11@cluster0.nszd5.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=DOMinators@404
 GOOGLE_CLIENT_ID=82433648679-frl64r22pc6gnqd3imu8fvt4cmshdkka.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
